# slurdletwo

./: .gitignore  README.md  app.py  main.py  package.json  pyproject.toml  requirements.txt
data/: slurs.db
src/: config.py  pull.py  slurs.py  weights.py
static/: app.js
static/css/: style.css
static/src/: input.css
templates/: base.jinja  index.jinja
